# polymarket-trader

./: .gitignore  README.md  pyproject.toml
config/: .env.example  risk.yaml  settings.yaml
src/: __init__.py
src/adapter/: __init__.py  cli.py
src/application/: __init__.py  risk_service.py  strategy_engine.py  trading_service.py
src/domain/: __init__.py  entities.py  enums.py  events.py  value_objects.py
src/domain/strategies/: __init__.py  base.py  composite.py  orderbook_imbalance.py  simple_trend.py  spread_arbitrage.py
src/infrastructure/: __init__.py  blockchain_client.py  clob_client.py  config_loader.py  polymarket_client.py  retry_client.py
tests/unit/: test_domain.py  test_risk.py  test_strategies.py
